pytest is required to run the tests

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,6 +36,8 @@ requirements:
     - requests
 
 test:
+  requires:
+    - pytest-astropy
   imports:
     - halotools
     - halotools.empirical_models
