--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,14 +21,14 @@ requirements:
   host:
     - python
     - setuptools
-    - numpy        # [not (win and py36)]
-    - numpy         # [win and py36]
+    - numpy        # [not (win and py==36)]
+    - numpy         # [win and py==36]
     - cython
   run:
     - python
     - astropy >=1
-    - {{ pin_compatible('numpy') }}   # [not (win and py36)]
-    - {{ pin_compatible('numpy') }}   # [win and py36]
+    - {{ pin_compatible('numpy') }}   # [not (win and py==36)]
+    - {{ pin_compatible('numpy') }}   # [win and py==36]
     - scipy
     - beautifulsoup4
     - requests
@@ -85,7 +85,7 @@ test:
 
 about:
   home: http://halotools.readthedocs.io
-  license: BSD 3-clause
+  license: BSD-3-Clause
   license_family: BSD
   license_file: licenses/LICENSE.rst
   summary: Package for studying large scale structure, cosmology, and galaxy evolution using N-body simulations and halo models.
