--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -86,7 +86,7 @@ test:
 
 about:
   home: http://halotools.readthedocs.io
-  license: BSD 3-clause
+  license: BSD-3-Clause
   license_family: BSD
   license_file: licenses/LICENSE.rst
   summary: Package for studying large scale structure, cosmology, and galaxy evolution using N-body simulations and halo models.
