Try to force cythonization

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   number: 3
-  script: python setup.py install --offline --single-version-externally-managed --record=record.txt
+  script: cython $(find halotools -name \*.pyx) && python setup.py install --offline --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
