--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,11 +14,9 @@ source:
 
 build:
   number: 3
-  # script: cython --cplus -v $(find halotools -name \*.pyx) && python setup.py install --offline --single-version-externally-managed --record=record.txt
   script:
    - cython --cplus -v $(find halotools -name \*.pyx)
-   # - {{ PYTHON }} setup.py install --offline --single-version-externally-managed --record=record.txt
-   - {{ PYTHON }} -m pip install . -vv --install-option="--offline"
+   - {{ PYTHON }} setup.py install --offline --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
@@ -33,8 +31,6 @@ requirements:
     - setuptools
     - numpy
     - cython
-    - pip
-    - astropy-helpers
   run:
     - python
     - astropy >=1
