--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,7 @@ source:
 
 build:
   number: 0
+  skip: true  # [py<3.9]
   script: python setup.py install --offline --single-version-externally-managed --record=record.txt
 
 requirements:
