Fix typo in package name

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - setuptools
     - numpy
     - cython
-    - extension_helpers
+    - extension-helpers
   run:
     - python
     - astropy
