--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,8 @@ requirements:
     - numpy                                  # [build_platform != target_platform]    
   host:
     - python
-    - setuptools
+    - setuptools_scm
+    - wheel
     - numpy
     - cython
     - extension-helpers
