--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - numpy                                  # [build_platform != target_platform]    
   host:
     - python
+    - setuptools
     - setuptools_scm
     - pip
     - wheel
