Pin cython to version in pyproject.toml

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - pip
     - wheel
     - numpy
-    - cython
+    - cython =3.0.2
     - extension-helpers
   run:
     - python
